--- a/serenity/build.gradle
+++ b/serenity/build.gradle
@@ -1,7 +1,13 @@
-apply plugin: 'net.serenity-bdd.aggregator'
+plugins {
+    id "net.serenity-bdd.serenity-gradle-plugin" version "$serenityVersion"
+}
 
 dependencies {
-    testCompile("net.serenity-bdd:serenity-core:$serenityVersion")
-    testCompile("net.serenity-bdd:serenity-junit:$serenityVersion")
-    testCompile("net.serenity-bdd:serenity-cucumber:$cucumberVersion")
+    testImplementation("net.serenity-bdd:serenity-core:$serenityVersion")
+    testImplementation("net.serenity-bdd:serenity-junit:$serenityVersion")
+    testImplementation("net.serenity-bdd:serenity-cucumber:$serenityVersion")
+}
+
+serenity {
+    outputDirectory = "/build"
 }
