--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,22 @@ buildscript {
         mavenLocal()
         jcenter()
     }
+
+    ext {
+        serenityVersion = '3.3.4'
+    }
+
     dependencies {
-        classpath("net.serenity-bdd:serenity-gradle-plugin:1.9.19")
-        classpath "com.diffplug.spotless:spotless-plugin-gradle:3.1.0"
+        classpath "com.diffplug.spotless:spotless-plugin-gradle:6.11.0"
     }
 }
 
 subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
-    apply plugin: 'com.diffplug.gradle.spotless'
+    apply plugin: 'com.diffplug.spotless'
 
-    sourceCompatibility = 1.8
+    sourceCompatibility = 18
 
     repositories {
         mavenCentral()
@@ -23,22 +27,18 @@ subprojects {
         jcenter()
     }
 
-    ext {
-        serenityVersion = '1.9.19'
-        cucumberVersion = '1.9.7'
-    }
-
     dependencies {
-        compile 'org.slf4j:slf4j-simple:1.7.25'
-        testCompile 'junit:junit:4.12'
-        testCompile("org.assertj:assertj-core:3.10.0")
+        implementation 'org.slf4j:slf4j-simple:2.0.1'
+        implementation 'io.vavr:vavr:0.10.4'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+        testImplementation("org.assertj:assertj-core:3.23.1")
     }
 
     spotless {
         java {
             removeUnusedImports()
             trimTrailingWhitespace()
-            googleJavaFormat('1.5')
+            googleJavaFormat('1.15.0')
         }
     }
 
